<resources>
    <string name="app_name">Calculadora</string>

    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>

    <string name="btnSum">+</string>
    <string name="btnResta">-</string>
    <string name="btnMulti">*</string>
    <string name="btnDivi">/</string>
    <string name="btnCambioSigno">+/-</string>
    <string name="btnDecimal">.</string>
    <string name="btnIgual">=</string>
    <string name="btnClear">C</string>
    <string name="btnClearMemoria">MC</string>
    <string name="btnAMemoria">M+</string>
    <string name="btnQuitDeMemoria">M-</string>
    <string name="btnLlamarMemoria">MR</string>
    <string name="btnRaiz">√</string>
    <string name="btnElevar">x²</string>
    <string name="btnInvertir">1/x</string>
    <string name="btnSeno">sin</string>
    <string name="btnCoseno">cos</string>
    <string name="btnTangente">tan</string>

    <string name="main.menu.action.help">Ajustes</string>

    <string name="settings.nightmode">Modo Nocturno</string>
    <string name="settings.daymode">Modo Diurno</string>
    <string name="settings.about">Acerca del desarrollador</string>

    <string name="settings.paragraph.help">

    </string>
</resources>
